--- a/app/views/menu.html
+++ b/app/views/menu.html
@@ -1,6 +1,8 @@
 <ul class="nav navbar-nav">
 	<li class="active"><a data-ui-sref="index">Home</a></li>
 	<li><a data-ui-sref="products">Products</a></li>
+	<!-- <li><a data-ui-sref="products.grid">Products - sortable grid</a></li>
+	<li><a data-ui-sref="products.inf">Products - infinitive list</a></li> -->
 	<li><a data-ui-sref="about">About</a></li>
 	<li><a data-ui-sref="contact">Contact</a></li>
 </ul>
