--- a/app/views/products.html
+++ b/app/views/products.html
@@ -1,4 +1,2 @@
 <p>This is the products view.</p>
-<div>
-	<div class="gridStyle" data-ng-grid="gridOptions"></div>
-</div>
+<div data-ui-view></div>
