--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,71 +1,71 @@
 body {
-    padding-top: 50px;
-    overflow: hidden;
+	padding-top: 50px;
+	overflow: hidden;
 }
 #wrapper {
-    min-height: 100%;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0px;
-    left: 0;
-    display: inline-block;
+	min-height: 100%;
+	height: 100%;
+	width: 100%;
+	position: absolute;
+	top: 0px;
+	left: 0;
+	display: inline-block;
 }
 #main-wrapper {
-    height: 100%;
-    overflow-y: auto;
-    padding: 50px 0 0px 0;
+	height: 100%;
+	overflow-y: auto;
+	padding: 50px 0 0px 0;
 }
 #main {
-    position: relative;
-    height: 100%;
-    overflow-y: auto;
-    padding: 0 15px;
+	position: relative;
+	height: 100%;
+	overflow-y: auto;
+	padding: 0 15px;
 }
 #sidebar-wrapper {
-    height: 100%;
-    padding: 50px 0 0px 0;
-    position: fixed;
-    border-right: 1px solid gray;
+	height: 100%;
+	padding: 50px 0 0px 0;
+	position: fixed;
+	background: #F8F8F8; /*E7E7E7*/
 }
 #sidebar {
-    position: relative;
-    height: 100%;
-    overflow-y: auto;
+	position: relative;
+	height: 100%;
+	overflow-y: auto;
 }
 #sidebar .list-group-item {
-        border-radius: 0;
-        border-left: 0;
-        border-right: 0;
-        border-top: 0;
+		border-radius: 0;
+		border-left: 0;
+		border-right: 0;
+		border-top: 0;
 }
 
-/*.gridStyle {
-    border: 1px solid rgb(212,212,212);
-    width: 400px !important; 
-    height: 300px !important;
-}*/
+.gridStyle {
+	border: 1px solid rgb(212,212,212);
+	width: 400px !important; 
+	height: 300px !important;
+}
 
 @media (max-width: 992px) {
-    body {
-        padding-top: 0px;
-    }
+	body {
+		padding-top: 0px;
+	}
 }
 @media (min-width: 992px) {
-    #main-wrapper {
-        float:right;
-    }
+	#main-wrapper {
+		float:right;
+	}
 }
 @media (max-width: 992px) {
-    #main-wrapper {
-        padding-top: 0px;
-    }
+	#main-wrapper {
+		padding-top: 0px;
+	}
 }
 @media (max-width: 992px) {
-    #sidebar-wrapper {
-        position: static;
-        height:auto;
-        max-height: 300px;
-      border-right:0;
+	#sidebar-wrapper {
+		position: static;
+		height:auto;
+		max-height: 300px;
+	  border-right:0;
   }
 }
