--- a/app/views/menu.html
+++ b/app/views/menu.html
@@ -1,3 +1,4 @@
+<div class="navbar navbar-default navbar-fixed-top">
 <ul class="nav navbar-nav">
 	<li class="active"><a data-ui-sref="index">Home</a></li>
 	<li><a data-ui-sref="products">Products</a></li>
@@ -6,3 +7,4 @@
 	<li><a data-ui-sref="about">About</a></li>
 	<li><a data-ui-sref="contact">Contact</a></li>
 </ul>
+</div>
