--- a/app/views/productsgrid.html
+++ b/app/views/productsgrid.html
@@ -2,4 +2,7 @@
 <p>Products: {{products.length}}</p>
 <div>
 	<div class="gridStyle" data-ng-grid="gridOptions"></div>
+	<div>
+		<p>Selected Row: {{selectedRow}}</p>
+	</div>
 </div>
